Login Screen fix

--- a/ShopGo/CartAnimationFiles/CartAnimationStoryboard.storyboard
+++ b/ShopGo/CartAnimationFiles/CartAnimationStoryboard.storyboard
@@ -16,7 +16,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cart" translatesAutoresizingMaskIntoConstraints="NO" id="pqZ-sD-reP">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cartImage" translatesAutoresizingMaskIntoConstraints="NO" id="pqZ-sD-reP">
                                 <rect key="frame" x="59" y="160" width="275" height="422"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="275" id="gcw-bq-mHR"/>
@@ -52,7 +52,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="cart" width="612" height="612"/>
+        <image name="cartImage" width="500" height="500"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
